--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="images/index.css">
-<title>水果忍者</title>
+<title>FRUIT-NINJA</title>
 <!--[if lt IE 9]><script>document.createElement("canvas");</script><![endif]-->
 </head>
 <body>
 <div id="extra"></div>
 <em> -- Fruit Ninja -- </em>
 <em> The game is developed by the Baidu JS team, </em>
-<em> we provide the source in git: https://github.com/ChineseDron/fruit-ninja </em>
+<em> we provide the source in git: https://juninm0.github.io/fruitninja </em>
 <em> follow me on weibo http://weibo.com/baidujs </em>
 <em> or learn more, to see http://tangram.baidu.com </em>
 <canvas id="view" width="640" height="480"></canvas>
